package fr.fges;

public interface Command {
    void execute();
    String getDescription();
}
