classDiagram
    class GameRepository {
        <<interface>>
        +load() List~BoardGame~
        +save(games : List~BoardGame~) void
    }

    class JsonGameRepository {
        -filepath : String
        -mapper : ObjectMapper
        +JsonGameRepository(filepath : String)
        +load() List~BoardGame~
        +save(games : List~BoardGame~) void
    }

    class CsvGameRepository {
        -filePath : String
        +CsvGameRepository(filePath : String)
        +load() List~BoardGame~
        +save(games : List~BoardGame~) void
    }

    class GameCollection {
        -games : List~BoardGame~
        -gameRepository : GameRepository
        +GameCollection(gameRepository : GameRepository)
        +addGame(game : BoardGame) void
        +removeGame(game : BoardGame) void
        +getGames() List~BoardGame~
        +viewAllGames() void
        +alreadyExist(game : BoardGame) boolean
        +recommendGame(nbPlayer : int) void
        +getRandomGames(count : int) void
    }

    class BoardGame {
        <<record>>
        +title : String
        +minPlayers : int
        +maxPlayers : int
        +category : String
    }

    class Command {
        <<interface>>
        +execute() void
        +getDescription() String
    }

    class InteractiveCommand {
        #gameCollection : GameCollection
        #scanner : Scanner
        +getUserInput(prompt : String) String
    }

    class AddGameCommand {
        +AddGameCommand(GameCollection, Scanner)
        +execute() void
        +getDescription() String
    }
    class RemoveGameCommand {
        +RemoveGameCommand(GameCollection, Scanner)
        +execute() void
        +getDescription() String
    }
    class ListGameCommand {
        +ListGameCommand(GameCollection)
        +execute() void
        +getDescription() String
    }
    class RecommendGameCommand {
        +RecommendGameCommand(GameCollection, Scanner)
        +execute() void
        +getDescription() String
    }
    class SummaryCommand {
        +SummaryCommand(GameCollection, Scanner)
        +execute() void
        +getDescription() String
    }
    class ExitCommand {
        +ExitCommand(GameCollection, Scanner)
        +ExitCommand()
        +execute() void
        +getDescription() String
    }

    class Menu {
        -collection : GameCollection
        -scanner : Scanner
        +Menu(collection : GameCollection)
        +run() void
        -displayMainMenu() void
    }

    class Main {
        +main(args : String[]) void
    }

    JsonGameRepository ..|> GameRepository : implements
    CsvGameRepository ..|> GameRepository : implements
    GameCollection --> GameRepository : uses (Dependency Injection)
    GameCollection o-- BoardGame : contains
    Menu --> GameCollection : manages
    Main ..> GameRepository : creates
    Main ..> GameCollection : creates
    Main ..> Menu : creates
    InteractiveCommand <|-- AddGameCommand
    InteractiveCommand <|-- RemoveGameCommand
    InteractiveCommand <|-- ListGameCommand
    InteractiveCommand <|-- RecommendGameCommand
    InteractiveCommand <|-- SummaryCommand
    InteractiveCommand <|-- ExitCommand
    Command <|.. InteractiveCommand
    Command <|.. AddGameCommand
    Command <|.. RemoveGameCommand
    Command <|.. ListGameCommand
    Command <|.. RecommendGameCommand
    Command <|.. SummaryCommand
    Command <|.. ExitCommand